--- a/public/css/style.css
+++ b/public/css/style.css
@@ -48,7 +48,7 @@ h6 {
 #header .logo {
   font-size: 32px;
   margin: 0;
-  padding: 0;
+  padding: 12px;
   line-height: 1;
   font-weight: 400;
   letter-spacing: 2px;
@@ -74,15 +74,22 @@ h6 {
 --------------------------------------------------------------*/
 .header-social-links {
   padding-right: 15px;
+  padding-top: 24px;
+}
+
+@media (max-width: 420px) {
+  .header-social-links {
+    display: none;
+  }
 }
 
 .header-social-links a {
-  color: #6f6f6f;
-  padding-left: 6px;
+  color: #ffff;
+  padding-left: 30px;
   display: inline-block;
   line-height: 0px;
   transition: 0.3s;
-  font-size: 16px;
+  font-size: 40px;
 }
 
 .header-social-links a:hover {
@@ -233,6 +240,27 @@ section {
 /*--------------------------------------------------------------
 # Skills
 --------------------------------------------------------------*/
+.progress-bar {
+  width: 0;
+  animation: progress 1.5s ease-in-out forwards;
+}
+
+@keyframes progress {
+  from {
+    width: 0;
+  }
+  to {
+    width: 100%;
+  }
+}
+@keyframes show {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
 .skills .progress {
   height: 60px;
   display: block;
